# ncnn_on_esp32

./: CMakeLists.txt  esp32c3.toolchain.cmake  partitions.csv  sdkconfig
image/: fs.h  img2c.py
main/: CMakeLists.txt  main.cpp  mnist-1-bin.h
ncnn/include/ncnn/: platform.h
ncnn/lib/cmake/ncnn/: ncnn.cmake  ncnnConfig.cmake
